<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.EditLotActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/fields_form_activity_padding">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/quantity_text_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/quantity_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/quantity_hint"
            android:inputType="number"
            android:maxLength="10"
            android:maxLines="1"
            android:imeOptions="actionNext" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/purchase_price_text_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/quantity_text_layout"
        android:layout_marginTop="@dimen/input_margin">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/purchase_price_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/purchase_price_hint"
            android:inputType="numberDecimal"
            android:maxLength="20"
            android:maxLines="1"
            android:imeOptions="actionNext" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/purchase_date_text_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/purchase_price_text_layout"
        android:layout_marginTop="@dimen/input_margin">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/purchase_date_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/purchase_date_hint"
            android:inputType="date"
            android:longClickable="false"
            android:maxLength="10"
            android:maxLines="1"
            android:imeOptions="actionNext" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/commission_text_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/purchase_date_text_layout"
        android:layout_marginTop="@dimen/input_margin">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/commission_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/commission_hint"
            android:inputType="numberDecimal"
            android:maxLength="20"
            android:maxLines="1"
            android:imeOptions="actionDone" />
    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/button_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/commission_text_layout"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/input_margin"
        android:text="@android:string/ok" />

</android.support.constraint.ConstraintLayout>