<?xml version="1.0" encoding="utf-8"?>
<!--
    Some launchers don't respect locale's layout direction for widgets,
    so we need to explicitly specify it.
    -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/widget_layout_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="locale">

    <ImageView
        android:id="@+id/position_level_stripes"
        android:layout_width="@dimen/widget_corner_radius"
        android:layout_height="match_parent"
        android:contentDescription="@string/value_change_stripe_description"
        android:src="@drawable/widget_stripe" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="@dimen/widget_corner_radius"
        android:paddingEnd="@dimen/widget_corner_radius"
        android:background="@drawable/widget_bg"
        android:backgroundTint="@color/widgetBackground">

        <TextView
            android:id="@+id/position_name"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_gravity="start"
            android:gravity="center_vertical"
            android:text="@string/unknown_value"
            style="@style/Widget.Title" />

        <TextView
            android:id="@+id/position_current_value"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical|end"
            android:text="@string/unknown_value"
            style="@style/Widget.Value" />

        <!-- TextView doesn't allow to vertically align compound drawable, using layout instead -->
        <LinearLayout
            tools:ignore="UseCompoundDrawables"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center_vertical|end"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/symbol_value_change_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/value_change_icon_offset"
                android:layout_marginEnd="@dimen/value_change_icon_margin"
                android:contentDescription="@string/symbol_value_change_icon_description" />

            <TextView
                android:id="@+id/position_value_change"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/EllipsizeTextView"
                android:textAppearance="@style/TextAppearance.ListItem.Value.NoChange" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
